added the new todo list

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "dedent": "^1.5.3",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "svix": "^1.62.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
